# gesture

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  camera.py  cli.py  config.py  drawing.py  hand_tracking.py  models.py
src/gestures/: __init__.py  features.py  recognizer.py  rules.py
tests/: conftest.py  test_features.py  test_gesture_rules.py
