[project]
name = "hand-wire-demo"
version = "0.1.0"
description = "Real-time hand wireframe and gesture recognition using MediaPipe and OpenCV"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Stéphane Brun", email = "stephane.sbnet@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "mediapipe>=0.10",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
hand-wire-demo = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = {"src" = ""}
only-include = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gestures"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]
